--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
 <div class="fixed bottom-0 left-0 w-full flex z-50 text-sm sm:text-base">
     <!-- 카카오톡 버튼 -->
     <button
-      onclick="window.open('http://qr.kakao.com/talk/8icR2d8vBLPlQdCbhrqBOlaquCuM', '_blank')"
+      onclick="window.open('http://qr.kakao.com/talk/2ytK.gxmcL0gXXmKqhsJ4jtM0SE-', '_blank')"
       class="w-1/2 bg-yellow-400 text-black py-4 sm:py-5 font-bold hover:bg-yellow-500 transition flex flex-col sm:flex-row items-center justify-center gap-1 sm:gap-2 text-center"
     >
       <i class="ri-kakao-talk-fill ri-lg sm:ri-xl"></i>
